removed more (not all) deprecation warnings